# stb-mon

./: .gitignore  Cargo.toml  LICENSE  README.md  stbmon.toml
src/: api.rs  checker.rs  config.rs  main.rs  octet.rs  routes.rs  templates.rs  time_util.rs
src/database/: mod.rs  monitor.rs  record.rs  session.rs
src/monitor/: http.rs  mod.rs  tcp.rs
src/templates/: admin.rs  index.rs  mod.rs  monitor.rs
static/: admin.js  index.js
