[package]
name = "stb-mon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = "0.4.39"
fastrand = "2.3.0"
hex = "0.4.3"
itertools = "0.14.0"
lazy_static = "1.5.0"
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
rmp-serde = "1.3.0"
rusqlite = "0.33.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
